--- a/source/index.html
+++ b/source/index.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="Smart Device - умные технологии" content="Поставляем комплектующие для печатных плат">
-    <meta name="Smart Device - умные технологии" content="Производим печатные платыБ монтируем печатные платы">
-    <meta name="Smart Device - умные технологии" content="Производим комплектующие для печатных плат">
-    <meta name="Smart Device - умные технологии" content="Выполняем срочные заказы печатных плат, комплектующих для светотехники и пилотные образцы до 10 дней">
-    <meta name="Smart Device - умные технологии" content="Выполняем пилотные образцы до 10 дней">
+    <meta name="Smart Device-умные технологиии." content="Производство печатных плат. Прототипы и серии. Гибкие цены. Срок от 3 дней! Гарантия. Сертификат качества. Комплекс услуг по контрактному производству электроники. Инженерная поддержка. Опыт работы более 14 лет.">
+    <meta property="og:description" content="Производство печатных плат. Прототипы и серии. Гибкие цены. Срок от 3 дней! Гарантия. Сертификат качества. Комплекс услуг по контрактному производству электроники. Инженерная поддержка. Опыт работы более 14 лет.">
     <title>Smart device - производство печатные платы, монтаж плат, комплектующие для светотехник </title>
     <link rel="preload" href="fonts/robotoCondensed-Bold.woff2" as="font" crossorigin="anonymous">
     <link rel="preload" href="fonts/robotoCondensed-Regular.woff2" as="font" crossorigin="anonymous">
@@ -25,39 +22,35 @@
     </div>
 
     <header class="page-header">
-      <div class="page-header__wrapper">
-        <div class="container">
-          <div class="page-header__wrapper-block">
-            <a class="page-header__logo">
-              <img class="logo-img" src="img/logo.svg" width="38" height="38" alt="Логотип Smart device">
-            </a>
-            <a class="page-header__mail" href="mailto:info@sd.ru">
-              <svg class="page-header__mail-svg" width="26" height="19" aria-labelledby="Написать нам">
-                <use xlink:href="img/sprite.svg#icon-envelope"></use>
-              </svg>
-            </a>
-            <a class="page-header__phone" href="tel:+74950005252">
-              <svg class="page-header__phone-svg" width="24" height="24" aria-labelledby="Позвонить нам">
-                <use xlink:href="img/sprite.svg#icon-phone-call"></use>
-              </svg>
-            </a>
-            <button class="page-header__call-button" type="button" value="order-call">Заказать звонок</button>
-          </div>
-          <div class="page-header__proposal">
-            <h1 class="page-header__title">Печатные платы</h1>
-            <p class="page-header__text">производство и монтаж, поставка комплектующих, блоков и модулей</p>
-            <a class="page-header__button" href="#consultation"><span class="page-header__button-text">Бесплатная консультация</span><span class="page-header__button-text-tablet-width">Получить бесплатную консультацию</span></a>
-            <a class="page-header__link" href="#advantages">
-              <img class="page-header__link-img" src="../img/scroll.svg" width="16" height="93" alt="Скролл до блока преимуществ">
-            </a>
-          </div>
+      <div class="container">
+        <div class="page-header__wrapper-block">
+          <a class="page-header__logo">
+            <img class="logo-img" src="img/logo.svg" width="38" height="38" alt="Логотип Smart device">
+          </a>
+          <a class="page-header__mail" href="mailto:info@sd.ru">
+            <svg class="page-header__mail-svg" width="26" height="19" aria-label="Написать нам">
+              <use xlink:href="img/sprite.svg#icon-envelope"></use>
+            </svg>
+          </a>
+          <a class="page-header__phone" href="tel:+74950005252">
+            <svg class="page-header__phone-svg" width="24" height="24" aria-label="Позвонить нам">
+              <use xlink:href="img/sprite.svg#icon-phone-call"></use>
+            </svg>
+          </a>
+          <button class="page-header__call-button" type="button" value="order-call">Заказать звонок</button>
+        </div>
+        <div class="page-header__proposal">
+          <h1 class="page-header__title">Печатные платы</h1>
+          <p class="page-header__text">производство и монтаж, поставка комплектующих, блоков и модулей</p>
+          <a class="page-header__button" href="#consultation"><span class="page-header__button-text">Бесплатная консультация</span><span class="page-header__button-text-tablet-width">Получить бесплатную консультацию</span></a>
+          <a class="page-header__link" href="#advantages">Скролл вниз</a>
         </div>
       </div>
     </header>
 
     <main class="main">
       <section class="advantages">
-        <a href="#" id="advantages"></a>
+        <a id="advantages"></a>
         <div class="advantages__wrapper container">
           <div class="advantages-card__wrapper">
             <div class="advantages-card">
@@ -92,7 +85,7 @@
           </div>
       </section>
       <div class="about-company container">
-        <a href="#" id="about-company"></a>
+        <a id="about-company"></a>
         <h2 class="about-company__title">О компании</h2>
         <p class="about-company__text">Мы поставляем электронные комплектующие, производим печатные платы и предоставляем мировые технологии с 1997 года. Выполняем срочные заказы и пилотные образцы до 10 дней.</p>
         <p class="about-company__text about-company__text--height">Наши поставщики - мировые производители электронных компонентов: OSRAM, CREE, HOLGLITRONIC, REFOND. Печатные платы и комплектующие Service Devices применяются на предприятиях Российских Железных Дорог<span>..</span>
@@ -100,9 +93,8 @@
         <a class="about-company__button" href="#">Подробнее</a>
       </div>
       <section class="product">
-        <h1 class="visually-hidden">Наши предложения</h1>
         <div class="product__wrapper container">
-          <a href="#" id="product"></a>
+          <a id="product"></a>
           <h2 class="product__title">Service Device <span class="product__title-span">предлагает следующие товары и услуги</span></h2>
           <ul class="product-list">
             <li class="product-list__item">
@@ -139,8 +131,8 @@
                 <label for="phone">Телефон</label>
               </div>
               <div class="feedback__input-wrapper">
-                <textarea name="your-question" required></textarea>
-                <label for="phone">Ваш вопрос</label>
+                <textarea id="your-question" name="your-question" required></textarea>
+                <label for="your-question">Ваш вопрос</label>
               </div>
               <button class="feedback__button" type="submit">Задать вопрос</button>
               <input id="personal-data" type="checkbox" name="personal-data" checked>
@@ -163,7 +155,7 @@
               <li class="social__item">
                 <a class="social__link social__link--fb" href="#">
                   <span class="visually-hidden">Мы в Фейсбуке</span>
-                  <svg class="social__icon-fb" width="27" height="27" aria-labelledby="Перейти в Фейсбук">
+                  <svg class="social__icon-fb" width="27" height="27" aria-label="Перейти в Фейсбук">
                     <use xlink:href="img/sprite.svg#icon-fb"></use>
                   </svg>
                 </a>
@@ -171,7 +163,7 @@
               <li class="social__item">
                 <a class="social__link social__link--ok" href="#">
                   <span class="visually-hidden">Мы в Одноклассниках</span>
-                  <svg class="social__icon-ok" width="27" height="26" aria-labelledby="Перейти в Одноклассниках">
+                  <svg class="social__icon-ok" width="27" height="26" aria-label="Перейти в Одноклассниках">
                     <use xlink:href="img/sprite.svg#icon-ok"></use>
                   </svg>
                 </a>
@@ -179,7 +171,7 @@
               <li class="social__item">
                 <a class="social__link social__link--vk" href="#">
                   <span class="visually-hidden">Мы в Вконтакте</span>
-                  <svg class="social__icon-vk" width="27" height="26" aria-labelledby="Перейти в Вконтакте">
+                  <svg class="social__icon-vk" width="27" height="26" aria-label="Перейти в Вконтакте">
                     <use xlink:href="img/sprite.svg#icon-vk"></use>
                   </svg>
                 </a>
@@ -188,7 +180,6 @@
           </div>
         </div>
         <div class="footer__accordion">
-          <h1 class="visually-hidden">Навигация по сайту</h1>
           <ul class="footer__accordion-list">
             <li class="sub footer__accordion-sub">
               <p class="sub__item-title">Разделы сайта</p>
