--- a/source/index.html
+++ b/source/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="Smart Device-умные технологиии." content="Производство печатных плат. Прототипы и серии. Гибкие цены. Срок от 3 дней! Гарантия. Сертификат качества. Комплекс услуг по контрактному производству электроники. Инженерная поддержка. Опыт работы более 14 лет.">
-    <meta property="og:description" content="Производство печатных плат. Прототипы и серии. Гибкие цены. Срок от 3 дней! Гарантия. Сертификат качества. Комплекс услуг по контрактному производству электроники. Инженерная поддержка. Опыт работы более 14 лет.">
+    <meta name="description" content="Smart Device производит печатные платы, прототипы и серии по выгодной цене. Поможем выбрать и заказать комплектующие для светотехники. Работаем оперативно, не разглашаем информацию, проверенные поставщики материалов, гибкие цены. Опыт работы с 2000 года.">
+    <meta property="og:type" content="website">
     <title>Smart device - производство печатные платы, монтаж плат, комплектующие для светотехник </title>
     <link rel="preload" href="fonts/robotoCondensed-Bold.woff2" as="font" crossorigin="anonymous">
     <link rel="preload" href="fonts/robotoCondensed-Regular.woff2" as="font" crossorigin="anonymous">
@@ -25,7 +25,7 @@
       <div class="container">
         <div class="page-header__wrapper-block">
           <a class="page-header__logo">
-            <img class="logo-img" src="img/logo.svg" width="38" height="38" alt="Логотип Smart device">
+            <img class="logo-img lazyload" data-src="img/logo.svg" width="38" height="38" alt="Логотип Smart device">
           </a>
           <a class="page-header__mail" href="mailto:info@sd.ru">
             <svg class="page-header__mail-svg" width="26" height="19" aria-label="Написать нам">
@@ -148,7 +148,7 @@
         <div class="footer__social">
           <div class="footer__social-wrapper container">
             <a class="footer__logo">
-              <img src="img/text-logo_dark.svg" width="216" height="52" alt="Логотип Smart Device">
+              <img class="lazyload" data src="img/text-logo_dark.svg" width="216" height="52" alt="Логотип Smart Device">
             </a>
             <p class="footer__copyright">1998-2018 SD Service Divices</p>
             <ul class="social footer__social-list">
