исправляет опечатки в index.html

--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Smart Device производит печатные платы, прототипы и серии по выгодной цене. Поможем выбрать и заказать комплектующие для светотехники. Работаем оперативно, не разглашаем информацию, проверенные поставщики материалов, гибкие цены. Опыт работы с 2000 года.">
+    <meta name="description" content="Smart Device производит печатные платы, прототипы и серии по выгодной цене. Поможем выбрать и заказать комплектующие для светотехники. Работаем оперативно, не разглашаем информацию, проверенные поставщики материалов, гибкие цены. Опыт работы с 2005 года.">
     <meta property="og:type" content="website">
     <title>Smart device - производство печатные платы, монтаж плат, комплектующие для светотехник </title>
     <link rel="preload" href="fonts/robotoCondensed-Bold.woff2" as="font" crossorigin="anonymous">
@@ -61,21 +61,21 @@
                 <p class="advantages-card__description">Усовершенствованная логистическая система позволяет нам просчитывать стоимость, производить и доставлять заказы плат и комплектующих в самые короткие сроки.</p>
               </div>
               <div class="advantages-card advantages-card--providers">
-                <svg class="advantages-card__icon-svg advantages-card__icon-svg--hired" width="32" height="33" aria-hidden="true" role="presentation" focusable="false">
+                <svg class="advantages-card__icon-svg advantages-card__icon-svg--hired" width="32" height="33" aria-hidden="true" focusable="false">
                   <use xlink:href="img/sprite.svg#icon-hired"></use>
                 </svg>
                 <h2 class="advantages-card__title advantages-card__title--margin-top">Крупные поставщики</h2>
                 <p class="advantages-card__description advantages-card__description--width">Нашими поставщиками являются такие крупные мировые компании как: OSRAM, CREE, HOLGLITRONIC, REFOND. Сотрудничество с такими компаниями обеспечивает хорошее качество нашей продукции.</p>
               </div>
               <div class="advantages-card advantages-card--privacy">
-                <svg class="advantages-card__icon-svg advantages-card__icon-svg--detective" width="31" height="27" aria-hidden="true" role="presentation" focusable="false">
+                <svg class="advantages-card__icon-svg advantages-card__icon-svg--detective" width="31" height="27" aria-hidden="true" focusable="false">
                   <use xlink:href="img/sprite.svg#icon-detective"></use>
                 </svg>
                 <h2 class="advantages-card__title advantages-card__title--margin">Полная конфиденциальность</h2>
                 <p class="advantages-card__description">По желанию клиента мы обеспечиваем полную конфиденциальность.</p>
               </div>
               <div class="advantages-card advantages-card--personalization">
-                <svg class="advantages-card__icon-svg advantages-card__icon-svg--personalization" width="33" height="33" aria-hidden="true" role="presentation" focusable="false">
+                <svg class="advantages-card__icon-svg advantages-card__icon-svg--personalization" width="33" height="33" aria-hidden="true" focusable="false">
                   <use xlink:href="img/sprite.svg#icon-tag"></use>
                 </svg>
                 <h2 class="advantages-card__title advantages-card__title--margin-bottom">Персонализация стоимости</h2>
@@ -148,7 +148,7 @@
         <div class="footer__social">
           <div class="footer__social-wrapper container">
             <a class="footer__logo">
-              <img class="lazyload" data src="img/text-logo_dark.svg" width="216" height="52" alt="Логотип Smart Device">
+              <img class="lazyload" data-src="img/text-logo_dark.svg" width="216" height="52" alt="Логотип Smart Device">
             </a>
             <p class="footer__copyright">1998-2018 SD Service Divices</p>
             <ul class="social footer__social-list">
@@ -243,7 +243,7 @@
         <p class="modal__description">Оставьте контакты, мы проконсультируем вас бесплатно в удобное время</p>
         <form class="modal__form" action="#" method="get">
           <div class="modal__input-wrapper">
-            <input id="user-_name" type="text" name="user-name" required>
+            <input id="user-name" type="text" name="user-name" required>
             <label for="user-name">Имя</label>
           </div>
           <div class="modal__input-wrapper">
@@ -262,8 +262,8 @@
       </div>
     </section>
 
-    <script src="js/vendor.js"></script>
-    <script src="js/main.js"></script>
+    <script async src="js/vendor.js"></script>
+    <script async src="js/main.js"></script>
     <script>svg4everybody();</script>
 
   </body>
