--- a/source/index.html
+++ b/source/index.html
@@ -25,7 +25,7 @@
       <div class="container">
         <div class="page-header__wrapper-block">
           <a class="page-header__logo">
-            <img class="logo-img lazyload" data-src="img/logo.svg" width="38" height="38" alt="Логотип Smart device">
+            <img class="logo-img lazyload" data-src="img/text-logo_light.svg" width="202" height="52" alt="Логотип Smart device">
           </a>
           <a class="page-header__mail" href="mailto:info@sd.ru">
             <svg class="page-header__mail-svg" width="26" height="19" aria-label="Написать нам">
@@ -42,7 +42,9 @@
         <div class="page-header__proposal">
           <h1 class="page-header__title">Печатные платы</h1>
           <p class="page-header__text">производство и монтаж, поставка комплектующих, блоков и модулей</p>
-          <a class="page-header__button" href="#consultation"><span class="page-header__button-text">Бесплатная консультация</span><span class="page-header__button-text-tablet-width">Получить бесплатную консультацию</span></a>
+          <a class="page-header__button" href="#consultation">
+            <span class="page-header__button-text">Бесплатная консультация</span>
+            <span class="page-header__button-text-tablet-width">Получить бесплатную консультацию</span></a>
           <a class="page-header__link" href="#advantages">Скролл вниз</a>
         </div>
       </div>
@@ -59,30 +61,30 @@
                 </svg>
                 <h2 class="advantages-card__title">Оперативные сроки</h2>
                 <p class="advantages-card__description">Усовершенствованная логистическая система позволяет нам просчитывать стоимость, производить и доставлять заказы плат и комплектующих в самые короткие сроки.</p>
-              </div>
-              <div class="advantages-card advantages-card--providers">
-                <svg class="advantages-card__icon-svg advantages-card__icon-svg--hired" width="32" height="33" aria-hidden="true" focusable="false">
-                  <use xlink:href="img/sprite.svg#icon-hired"></use>
-                </svg>
-                <h2 class="advantages-card__title advantages-card__title--margin-top">Крупные поставщики</h2>
-                <p class="advantages-card__description advantages-card__description--width">Нашими поставщиками являются такие крупные мировые компании как: OSRAM, CREE, HOLGLITRONIC, REFOND. Сотрудничество с такими компаниями обеспечивает хорошее качество нашей продукции.</p>
-              </div>
-              <div class="advantages-card advantages-card--privacy">
-                <svg class="advantages-card__icon-svg advantages-card__icon-svg--detective" width="31" height="27" aria-hidden="true" focusable="false">
-                  <use xlink:href="img/sprite.svg#icon-detective"></use>
-                </svg>
-                <h2 class="advantages-card__title advantages-card__title--margin">Полная конфиденциальность</h2>
-                <p class="advantages-card__description">По желанию клиента мы обеспечиваем полную конфиденциальность.</p>
-              </div>
-              <div class="advantages-card advantages-card--personalization">
-                <svg class="advantages-card__icon-svg advantages-card__icon-svg--personalization" width="33" height="33" aria-hidden="true" focusable="false">
-                  <use xlink:href="img/sprite.svg#icon-tag"></use>
-                </svg>
-                <h2 class="advantages-card__title advantages-card__title--margin-bottom">Персонализация стоимости</h2>
-                <p class="advantages-card__description">Мы подбираем определенную фабрику, поставщиков, вид доставки, чтобы установить ту цену, которая Вас устраивает.</p>
-              </div>
+            </div>
+            <div class="advantages-card advantages-card--providers">
+              <svg class="advantages-card__icon-svg advantages-card__icon-svg--hired" width="32" height="33" aria-hidden="true" focusable="false">
+                <use xlink:href="img/sprite.svg#icon-hired"></use>
+              </svg>
+              <h2 class="advantages-card__title advantages-card__title--margin-top">Крупные поставщики</h2>
+              <p class="advantages-card__description advantages-card__description--width">Нашими поставщиками являются такие крупные мировые компании как: OSRAM, CREE, HOLGLITRONIC, REFOND. Сотрудничество с такими компаниями обеспечивает хорошее качество нашей продукции.</p>
+            </div>
+            <div class="advantages-card advantages-card--privacy">
+              <svg class="advantages-card__icon-svg advantages-card__icon-svg--detective" width="31" height="27" aria-hidden="true" focusable="false">
+                <use xlink:href="img/sprite.svg#icon-detective"></use>
+              </svg>
+              <h2 class="advantages-card__title advantages-card__title--margin">Полная конфиденциальность</h2>
+              <p class="advantages-card__description">По желанию клиента мы обеспечиваем полную конфиденциальность.</p>
+            </div>
+            <div class="advantages-card advantages-card--personalization">
+              <svg class="advantages-card__icon-svg advantages-card__icon-svg--personalization" width="33" height="33" aria-hidden="true" focusable="false">
+                <use xlink:href="img/sprite.svg#icon-tag"></use>
+              </svg>
+              <h2 class="advantages-card__title advantages-card__title--margin-bottom">Персонализация стоимости</h2>
+              <p class="advantages-card__description">Мы подбираем определенную фабрику, поставщиков, вид доставки, чтобы установить ту цену, которая Вас устраивает.</p>
             </div>
           </div>
+        </div>
       </section>
       <div class="about-company container">
         <a id="about-company"></a>
@@ -146,11 +148,11 @@
     <footer class="footer">
       <div class="footer__wrapper">
         <div class="footer__social">
-          <div class="footer__social-wrapper container">
+          <div class="footer__social-wrapper">
             <a class="footer__logo">
               <img class="lazyload" data-src="img/text-logo_dark.svg" width="216" height="52" alt="Логотип Smart Device">
             </a>
-            <p class="footer__copyright">1998-2018 SD Service Divices</p>
+            <p class="footer__copyright footer__copyright--tablet-width">1998-2018 SD Service Divices</p>
             <ul class="social footer__social-list">
               <li class="social__item">
                 <a class="social__link social__link--fb" href="#">
@@ -209,7 +211,7 @@
               </ul>
             </li>
             <li class="sub footer__accordion-sub footer__accordion-sub--margin-left">
-              <p class="sub__item-title sub__item-title--margin-bottom">Наш офис</p>
+              <h2 class="sub__item-title sub__item-title--margin-bottom">Наш офис</h2>
               <a class="footer__accordion-link footer__accordion-link--margin-top"></a>
               <ul class="sub__list">
                 <li class="sub__item">
@@ -229,11 +231,13 @@
           </ul>
         </div>
       </div>
-      <div class="footer__agreement container">
-        <p class="footer__copyright footer__copyright--desktop">Все права защищены</p>
-        <p class="footer__copyright footer__copyright--desktop-logo">1998-2018 SD Service Divices</p>
-        <a class="footer__link-agreement" href="#">Условия конфиденциальности</a>
-        <p class="footer__agreement-copyright">Developed by wow studio</p>
+      <div class="footer__agreement">
+        <div class="footer__agreement-wrapper container">
+          <p class="footer__copyright footer__copyright--desktop">Все права защищены</p>
+          <p class="footer__copyright footer__copyright--desktop-logo">1998-2018 SD Service Divices</p>
+          <a class="footer__link-agreement" href="#">Условия конфиденциальности</a>
+          <p class="footer__agreement-copyright">Developed by wow studio</p>
+        </div>
       </div>
     </footer>
 
@@ -262,8 +266,8 @@
       </div>
     </section>
 
-    <script async src="js/vendor.js"></script>
-    <script async src="js/main.js"></script>
+    <script defer src="js/vendor.js"></script>
+    <script defer src="js/main.js"></script>
     <script>svg4everybody();</script>
 
   </body>
