правки по ревью наставника и баглист от тест без резины

--- a/source/index.html
+++ b/source/index.html
@@ -25,7 +25,7 @@
       <div class="container">
         <div class="page-header__wrapper-block">
           <a class="page-header__logo">
-            <img class="logo-img lazyload" data-src="img/logo-header.svg" width="202" height="52" alt="Логотип Smart device">
+            <img class="lazyload" data-src="img/logo-header.svg" width="202" height="52" alt="Логотип Smart device">
           </a>
           <a class="page-header__mail" href="mailto:info@sd.ru">
             <svg class="page-header__mail-svg" width="26" height="19" aria-label="Написать нам">
@@ -40,8 +40,8 @@
           <button class="page-header__call-button" type="button" value="order-call">Заказать звонок</button>
         </div>
         <div class="page-header__proposal">
-          <h1 class="page-header__title">Печатные платы</h1>
-          <p class="page-header__text">производство и монтаж, поставка комплектующих, блоков и модулей</p>
+          <h1>Печатные платы</h1>
+          <p class="page-header__proposal">производство и монтаж, поставка комплектующих, блоков и модулей</p>
           <a class="page-header__button" href="#consultation">
             <span class="page-header__button-text">Бесплатная консультация</span>
             <span class="page-header__button-text-tablet-width">Получить бесплатную консультацию</span></a>
@@ -52,84 +52,84 @@
 
     <main class="main">
       <section class="advantages">
-        <a id="advantages"></a>
+        <a id="advantages" href="#"></a>
         <div class="advantages__wrapper container">
-          <div class="advantages__card-wrapper">
+          <div class="advantages-card__wrapper">
             <div class="advantages-card">
-                <svg class="advantages-card__icon-svg" width="30" height="37">
-                  <use xlink:href="img/sprite.svg#icon-stopwatch" aria-hidden="true" role="presentation" focusable="false"></use>
-                </svg>
-                <h2 class="advantages-card__title">Оперативные сроки</h2>
-                <p class="advantages-card__description">Усовершенствованная логистическая система позволяет нам просчитывать стоимость, производить и доставлять заказы плат и комплектующих в самые короткие сроки.</p>
+              <svg class="advantages-card__icon-svg" width="30" height="37">
+                <use xlink:href="img/sprite.svg#icon-stopwatch" aria-hidden="true" role="presentation" focusable="false"></use>
+              </svg>
+              <h2>Оперативные сроки</h2>
+              <p>Усовершенствованная логистическая система позволяет нам просчитывать стоимость, производить и доставлять заказы плат и комплектующих в самые короткие сроки.</p>
             </div>
             <div class="advantages-card advantages-card--providers">
               <svg class="advantages-card__icon-svg advantages-card__icon-svg--hired" width="32" height="33" aria-hidden="true" focusable="false">
                 <use xlink:href="img/sprite.svg#icon-hired"></use>
               </svg>
-              <h2 class="advantages-card__title advantages-card__title--margin-top">Крупные поставщики</h2>
-              <p class="advantages-card__description advantages-card__description--width">Нашими поставщиками являются такие крупные мировые компании как: OSRAM, CREE, HOLGLITRONIC, REFOND. Сотрудничество с такими компаниями обеспечивает хорошее качество нашей продукции.</p>
+              <h2>Крупные поставщики</h2>
+              <p class="advantages-card__description--width">Нашими поставщиками являются такие крупные мировые компании как: OSRAM, CREE, HOLGLITRONIC, REFOND. Сотрудничество с такими компаниями обеспечивает хорошее качество нашей продукции.</p>
             </div>
             <div class="advantages-card advantages-card--privacy">
               <svg class="advantages-card__icon-svg advantages-card__icon-svg--detective" width="31" height="27" aria-hidden="true" focusable="false">
                 <use xlink:href="img/sprite.svg#icon-detective"></use>
               </svg>
-              <h2 class="advantages-card__title advantages-card__title--margin">Полная конфиденциальность</h2>
-              <p class="advantages-card__description">По желанию клиента мы обеспечиваем полную конфиденциальность.</p>
+              <h2>Полная конфиденциальность</h2>
+              <p>По желанию клиента мы обеспечиваем полную конфиденциальность.</p>
             </div>
             <div class="advantages-card advantages-card--personalization">
               <svg class="advantages-card__icon-svg advantages-card__icon-svg--personalization" width="33" height="33" aria-hidden="true" focusable="false">
                 <use xlink:href="img/sprite.svg#icon-tag"></use>
               </svg>
-              <h2 class="advantages-card__title advantages-card__title--margin-bottom">Персонализация стоимости</h2>
-              <p class="advantages-card__description">Мы подбираем определенную фабрику, поставщиков, вид доставки, чтобы установить ту цену, которая Вас устраивает.</p>
+              <h2>Персонализация стоимости</h2>
+              <p>Мы подбираем определенную фабрику, поставщиков, вид доставки, чтобы установить ту цену, которая Вас устраивает.</p>
             </div>
           </div>
         </div>
       </section>
       <div class="about-company container">
-        <a id="about-company"></a>
-        <h2 class="about-company__title">О компании</h2>
-        <p class="about-company__text">Мы поставляем электронные комплектующие, производим печатные платы и предоставляем мировые технологии с 1997 года. Выполняем срочные заказы и пилотные образцы до 10 дней.</p>
-        <p class="about-company__text about-company__text--height">Наши поставщики - мировые производители электронных компонентов: OSRAM, CREE, HOLGLITRONIC, REFOND. Печатные платы и комплектующие Service Devices применяются на предприятиях Российских Железных Дорог<span>..</span>
-        <p class="about-company__text about-company__text--index-appearance">(РЖД), РоссАвтоПрома (ВАЗ, АвтоГАЗ), МинАтома, СпецМедТехники. Среди наших клиентов крупнейшие Производители светотехники России.</p></p>
+        <a id="about-company" href="#"></a>
+        <h2>О компании</h2>
+        <p>Мы поставляем электронные комплектующие, производим печатные платы и предоставляем мировые технологии с 1997 года. Выполняем срочные заказы и пилотные образцы до 10 дней.</p>
+        <p class="about-company__text--height">Наши поставщики - мировые производители электронных компонентов: OSRAM, CREE, HOLGLITRONIC, REFOND. Печатные платы и комплектующие Service Devices применяются на предприятиях Российских Железных Дорог<span>..</span>
+        <p class="about-company__text--index-appearance">(РЖД), РоссАвтоПрома (ВАЗ, АвтоГАЗ), МинАтома, СпецМедТехники. Среди наших клиентов крупнейшие Производители светотехники России.</p></p>
         <a class="about-company__button" href="#">Подробнее</a>
       </div>
       <section class="product">
         <div class="product__wrapper container">
-          <a id="product"></a>
-          <h2 class="product__title">Service Device <span class="product__title-span">предлагает следующие товары и услуги</span></h2>
+          <a id="product" href="#"></a>
+          <h2>Service Device <span>предлагает следующие товары и услуги</span></h2>
           <ul class="product-list">
             <li class="product-list__item">
               <a class="product-list__link product-list__link--production" href="#" id="production">
-                <h3 class="product-list__title">Производство печатных плат</h3>
+                <h3>Производство печатных плат</h3>
               </a>
             </li>
             <li class="product-list__item">
               <a class="product-list__link product-list__link--installation" href="#" id="#installation">
-                <h3 class="product-list__title">Монтаж печатных плат</h3>
+                <h3>Монтаж печатных плат</h3>
               </a>
             </li>
-            <li class="product-list__item">
+            <li class="product-list__item product-list__item--components">
               <a class="product-list__link product-list__link--components" href="#" id="components">
-                <h3 class="product-list__title product-list__title--margin-top">Комплектующие для светотехники</h3>
+                <h3>Комплектующие для светотехники</h3>
               </a>
             </li>
           </ul>
         </div>
       </section>
       <section class="feedback">
-        <a id="consultation"></a>
+        <a id="consultation" href="#"></a>
         <div class="container">
           <div class="feedback__form-wrapper">
-            <h2 class="feedback__title">Остались вопросы? Задайте их нам!</h2>
-            <p class="feedback__text">Мы проконсультируем Вас бесплатно</p>
+            <h2>Остались вопросы? Задайте их нам!</h2>
+            <p>Мы проконсультируем Вас бесплатно</p>
             <form class="feedback__form" action="#" method="get">
               <div class="feedback__input-wrapper">
                 <input id="name" type="text" name="name" required>
                 <label for="name">Имя</label>
               </div>
               <div class="feedback__input-wrapper">
-                <input id="phone" type="text" name="tel" required>
+                <input id="phone" type="tel" name="tel" required>
                 <label for="phone">Телефон</label>
               </div>
               <div class="feedback__input-wrapper">
@@ -137,7 +137,7 @@
                 <label for="your-question">Ваш вопрос</label>
               </div>
               <button class="feedback__button" type="submit">Задать вопрос</button>
-              <input id="personal-data" type="checkbox" name="personal-data">
+              <input id="personal-data" type="checkbox" name="personal-data" required>
               <label class="personal-data" for="personal-data">Я согласен на обработку персональных данных</label>
             </form>
           </div>
@@ -150,7 +150,7 @@
         <div class="footer__social">
           <div class="footer__social-wrapper">
             <a class="footer__logo">
-              <img class="footer__logo-img lazyload" data-src="img/logo-footer.svg" width="216" height="52" alt="Логотип Smart Device">
+              <img class="lazyload" data-src="img/logo-footer.svg" width="216" height="52" alt="Логотип Smart Device">
             </a>
             <p class="footer__copyright footer__copyright--tablet-width">1998-2018 SD Service Divices</p>
             <ul class="social footer__social-list">
@@ -184,8 +184,8 @@
         <div class="footer__accordion">
           <ul class="footer__accordion-list">
             <li class="sub footer__accordion-sub">
-              <p class="sub__item-title">Разделы сайта</p>
-              <a class="footer__accordion-link"></a>
+              <h2>Разделы сайта</h2>
+              <a class="footer__accordion-link" href="#"></a>
               <ul class="sub__list">
                 <li class="sub__item">
                   <a class="sub__link" href="#about-company">О компании</a>
@@ -211,8 +211,8 @@
               </ul>
             </li>
             <li class="sub footer__accordion-sub footer__accordion-sub--margin-left">
-              <h2 class="sub__item-title sub__item-title--margin-bottom">Наш офис</h2>
-              <a class="footer__accordion-link footer__accordion-link--margin-top"></a>
+              <h2>Наш офис</h2>
+              <a class="footer__accordion-link footer__accordion-link--margin-top" href="#"></a>
               <ul class="sub__list">
                 <li class="sub__item">
                   <p class="sub__text">г. Мытищи, Олимпийский проспект, д.10</p>
@@ -233,8 +233,8 @@
       </div>
       <div class="footer__agreement">
         <div class="footer__agreement-wrapper container">
-          <p class="footer__copyright footer__copyright--desktop">Все права защищены</p>
-          <p class="footer__copyright footer__copyright--desktop-logo">1998-2018 SD Service Divices</p>
+          <p class="footer__copyright--desktop">Все права защищены</p>
+          <p class="footer__copyright--desktop-logo">1998-2018 SD Service Divices</p>
           <a class="footer__link-agreement" href="#">Условия конфиденциальности</a>
           <p class="footer__agreement-copyright">Developed by wow studio</p>
         </div>
@@ -243,15 +243,15 @@
 
     <section class="modal">
       <div class="modal__wrapper">
-        <h2 class="modal__title">Закажите звонок</h2>
-        <p class="modal__description">Оставьте контакты, мы проконсультируем вас бесплатно в удобное время</p>
+        <h2>Закажите звонок</h2>
+        <p>Оставьте контакты, мы проконсультируем вас бесплатно в удобное время</p>
         <form class="modal__form" action="#" method="get">
           <div class="modal__input-wrapper">
             <input id="user-name" type="text" name="user-name" required>
             <label for="user-name">Имя</label>
           </div>
           <div class="modal__input-wrapper">
-            <input id="phone-number" type="text" name="phone-number" required>
+            <input id="phone-number" type="tel" name="phone-number" required>
             <label for="phone-number">Телефон</label>
           </div>
           <div class="modal__input-wrapper">
@@ -259,7 +259,7 @@
             <label for="phone-number">Ваш вопрос</label>
           </div>
           <button class="modal__button" type="submit">Отправить</button>
-          <input id="user-data" type="checkbox" name="user-data">
+          <input id="user-data" type="checkbox" name="user-data" required>
           <label for="user-data">Я согласен на обработку персональных данных</label>
         </form>
         <button class="modal__close-button" type="button">Закрыть</button>
@@ -268,7 +268,6 @@
 
     <script defer src="js/vendor.js"></script>
     <script defer src="js/main.js"></script>
-    <script>svg4everybody();</script>
 
   </body>
 </html>
