правит адрес в футере, чтобы не переносился; толщина заголовков, заголовок в карточке преимуществ перенос при ширине более 320px

--- a/source/index.html
+++ b/source/index.html
@@ -211,7 +211,7 @@
             <li class="sub footer__accordion-sub footer__accordion-sub--margin-left">
               <h2>Наш офис</h2>
               <span class="footer__accordion-link footer__accordion-link--margin-top"></span>
-              <ul class="sub__list sub__list--height">
+              <ul class="sub__list">
                 <li class="sub__item">
                   <p>г. Мытищи, Олимпийский проспект, д.10</p>
                 </li>
